--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <span class="label">Horários</span>
       <ul id="hours" class="hours" aria-label="Horários disponíveis de manhã">
         <!-- Exemplo: Manhã -->
-        <li data-period="morning" class="hour-period">Manhã</li>
+        <!-- <li data-period="morning" class="hour-period">Manhã</li>
         <li data-period="morning" value="09:00" class="hour hour-available">
           09:00
         </li>
@@ -49,9 +49,9 @@
         </li>
         <li data-period="morning" value="12:00" class="hour hour-available">
           12:00
-        </li>
+        </li> -->
         <!-- Exemplo: Tarde  -->
-        <li data-period="morning" class="hour-period">Tarde</li>
+        <!-- <li data-period="morning" class="hour-period">Tarde</li>
         <li data-period="afternoon" value="13:00" class="hour hour-unavailable">
           13:00
         </li>
@@ -69,9 +69,9 @@
         </li>
         <li data-period="afternoon" value="18:00" class="hour hour-available">
           18:00
-        </li>
+        </li> -->
         <!-- Exemplo: Noite -->
-        <li data-period="morning" class="hour-period">Noite</li>
+        <!-- <li data-period="morning" class="hour-period">Noite</li>
 
         <li data-period="night" value="19:00" class="hour hour-available">
           19:00
@@ -81,7 +81,7 @@
         </li>
         <li data-period="night" value="21:00" class="hour hour-unavailable">
           21:00
-        </li>
+        </li> --> 
       </ul>
 
       <label for="client" class="label">Cliente</label>
