feat(schedule): adiciona método para exibir agendamentos com renderização dinâmica
Criado método para exibir os agendamentos do dia, percorrendo a lista retornada pela API e inserindo elementos HTML dinamicamente na interface.

Organização do código aprimorada ao separar responsabilidades e centralizar a lógica de renderização.

Adicionado bloco try/catch para tratar erros durante a exibição, garantindo maior estabilidade da aplicação.

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
           <span>09h-12h</span>
         </header>
         <ul id="period-morning" class="period">
-          <!-- Exemplo  -->
+          <!-- Exemplo  
           <li>
             <strong>11:00</strong>
             <span>Rodrigo Gonçalves</span>
             <img src="./src/assets/cancel.svg" alt="Cancelar" class="cancel-icon" />
-          </li>
+          </li>-->
         </ul>
       </section>
 
@@ -121,13 +121,13 @@
           <strong>Tarde</strong>
           <span>13h-18h</span>
         </header>
-        <ul id="period-afternoon" class="period">
-          <!-- Exemplo -->
+        <ul id="period-afternoon" class="period"> 
+          <!-- Exemplo 
           <li>
             <strong>14:00</strong>
             <span>Rodrigo Gonçalves</span>
             <img src="./src/assets/cancel.svg" alt="Cancelar" class="cancel-icon" />
-          </li>
+          </li> -->
         </ul>
       </section>
 
@@ -138,12 +138,12 @@
           <span>19h-21h</span>
         </header>
         <ul id="period-night" class="period">
-          <!-- Exemplo -->
+          <!-- Exemplo 
           <li>
             <strong>19:00</strong>
             <span>Rodrigo Gonçalves</span>
             <img src="./src/assets/cancel.svg" alt="Cancelar" class="cancel-icon" />
-          </li>
+          </li>-->
         </ul>
       </section>
     </aside>
